--- a/INPUTNIK.html
+++ b/INPUTNIK.html
@@ -14,65 +14,32 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: radial-gradient(circle at top, #1a1a1a, #000);
-    overflow: hidden;
+    background: linear-gradient(135deg, #bdbdbd, #e0e0e0);
     color: #e5e5e5;
   }
 
-  /* ====== EFEK ASAP ====== */
-  body::before,
-  body::after {
-    content: "";
-    position: absolute;
-    width: 200%;
-    height: 200%;
-    background: radial-gradient(
-      rgba(255,255,255,0.04) 10%,
-      rgba(0,0,0,0) 60%
-    );
-    animation: smoke 60s linear infinite;
-    opacity: 0.6;
-  }
-
-  body::after {
-    animation-duration: 90s;
-    opacity: 0.4;
-  }
-
-  @keyframes smoke {
-    from {
-      transform: translate(-25%, -25%) rotate(0deg);
-    }
-    to {
-      transform: translate(-25%, -25%) rotate(360deg);
-    }
-  }
-
-  /* ====== CONTAINER ====== */
+  /* ===== CONTAINER HITAM ===== */
   .container {
-    position: relative;
-    z-index: 2;
-    background: rgba(20, 20, 20, 0.85);
-    backdrop-filter: blur(6px);
+    background: #0f0f0f;
     padding: 30px;
     border-radius: 16px;
     width: 100%;
     max-width: 420px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.9);
-    border: 1px solid rgba(255,255,255,0.05);
     text-align: center;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+    border: 1px solid rgba(255,255,255,0.05);
   }
 
   h2 {
     font-weight: 800;
     margin-bottom: 10px;
-    color: #f1f1f1;
+    color: #ffffff;
     letter-spacing: 1px;
   }
 
   .info {
     font-size: 0.8rem;
-    color: #aaa;
+    color: #b5b5b5;
     margin-bottom: 20px;
   }
 
@@ -80,7 +47,7 @@
     display: block;
     margin-top: 15px;
     font-weight: bold;
-    color: #ddd;
+    color: #dddddd;
     text-align: left;
   }
 
@@ -90,18 +57,18 @@
     margin-top: 8px;
     border-radius: 8px;
     font-size: 14px;
-    background: #0f0f0f;
+    background: #1a1a1a;
     border: 1px solid #333;
-    color: #fff;
+    color: #ffffff;
   }
 
   input::placeholder {
-    color: #777;
+    color: #888;
   }
 
   input:focus {
     outline: none;
-    border-color: #666;
+    border-color: #777;
   }
 
   button {
@@ -109,36 +76,36 @@
     padding: 12px 18px;
     border: none;
     border-radius: 8px;
-    background: linear-gradient(135deg, #444, #111);
-    color: #fff;
+    background: #2f2f2f;
+    color: #ffffff;
     font-weight: bold;
     cursor: pointer;
     width: 100%;
-    transition: all 0.3s ease;
+    transition: background 0.3s ease;
   }
 
   button:hover {
-    background: linear-gradient(135deg, #666, #222);
+    background: #444;
   }
 
   button:disabled {
-    background: #333;
+    background: #555;
     cursor: not-allowed;
   }
 
   #hasil {
     margin-top: 20px;
     font-weight: bold;
-    color: #ddd;
+    color: #dddddd;
   }
 
   #formCutiBtn {
     display: none;
-    background: linear-gradient(135deg, #1f7a3f, #0f3d20);
+    background: #1e7e34;
   }
 
   #formCutiBtn:hover {
-    background: linear-gradient(135deg, #2ea366, #145a32);
+    background: #28a745;
   }
 </style>
 
@@ -235,4 +202,5 @@
 
 </body>
 </html>
+
 
