--- a/INPUTNIK.html
+++ b/INPUTNIK.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>INPUT NIK SEBELUM REQUEST</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+ <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <style>
   body {
     font-family: "Poppins", "Segoe UI", Arial, sans-serif;
@@ -31,11 +31,13 @@
   }
 
   h2 {
-    font-weight: 800;
-    margin-bottom: 10px;
-    color: #ffffff;
-    letter-spacing: 1px;
-  }
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 32px;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
+  color: #ffffff;
+}
+
 
   .info {
     font-size: 0.8rem;
@@ -202,5 +204,6 @@
 
 </body>
 </html>
+
 
 
