--- a/req-cuti.html
+++ b/req-cuti.html
@@ -6,134 +6,132 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    body {
-      margin: 0;
-      font-family: "Poppins", "Segoe UI", Arial, sans-serif;
-      background: linear-gradient(135deg, #2193b0, #6dd5ed);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
+  body {
+    margin: 0;
+    font-family: "Poppins", "Segoe UI", Arial, sans-serif;
+    background: linear-gradient(135deg, #bdbdbd, #e0e0e0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: #e5e5e5;
+  }
 
-    .container {
-      background: #fff;
-      padding: 36px 30px;
-      border-radius: 16px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-      width: 100%;
-      max-width: 520px;
-      text-align: center;
-      position: relative;
-    }
+  .container {
+    background: #0f0f0f;
+    padding: 36px 30px;
+    border-radius: 16px;
+    width: 100%;
+    max-width: 520px;
+    text-align: center;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.45);
+    border: 1px solid rgba(255,255,255,0.05);
+  }
 
-    /* ===== JUDUL UTAMA ===== */
-    .open-title {
-      font-size: 2.3rem;
-      font-weight: 900;
-      margin-bottom: 12px;
-      background: linear-gradient(90deg, #16a34a, #22c55e);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      letter-spacing: 1px;
-    }
+  /* ===== JUDUL UTAMA ===== */
+  .open-title {
+    font-size: 2.3rem;
+    font-weight: 900;
+    margin-bottom: 12px;
+    color: #ffffff;
+    letter-spacing: 1px;
+  }
 
-    /* ===== BADGE STATUS ===== */
-    .badge {
-      display: inline-block;
-      padding: 6px 16px;
-      border-radius: 999px;
-      font-weight: bold;
-      font-size: 0.9rem;
-      margin-bottom: 18px;
-      color: #fff;
-    }
+  /* ===== BADGE STATUS ===== */
+  .badge {
+    display: inline-block;
+    padding: 6px 16px;
+    border-radius: 999px;
+    font-weight: bold;
+    font-size: 0.9rem;
+    margin-bottom: 18px;
+    color: #fff;
+  }
 
-    .badge.open {
-      background: linear-gradient(90deg, #16a34a, #22c55e);
-      animation: pulse 1.8s infinite;
-    }
+  .badge.open {
+    background: linear-gradient(90deg, #16a34a, #22c55e);
+    animation: pulse 1.8s infinite;
+  }
 
-    .badge.close {
-      background: linear-gradient(90deg, #dc2626, #ef4444);
-    }
+  .badge.close {
+    background: linear-gradient(90deg, #dc2626, #ef4444);
+  }
 
-    @keyframes pulse {
-      0% { box-shadow: 0 0 0 0 rgba(34,197,94,0.6); }
-      70% { box-shadow: 0 0 0 14px rgba(34,197,94,0); }
-      100% { box-shadow: 0 0 0 0 rgba(34,197,94,0); }
-    }
+  @keyframes pulse {
+    0% { box-shadow: 0 0 0 0 rgba(34,197,94,0.6); }
+    70% { box-shadow: 0 0 0 14px rgba(34,197,94,0); }
+    100% { box-shadow: 0 0 0 0 rgba(34,197,94,0); }
+  }
 
-    /* ===== STATUS TEXT ===== */
-    .status-text {
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin-bottom: 22px;
-      color: #444;
-    }
+  /* ===== STATUS TEXT ===== */
+  .status-text {
+    font-size: 1.05rem;
+    font-weight: 600;
+    margin-bottom: 22px;
+    color: #d1d1d1;
+  }
 
-    /* ===== COUNTDOWN ===== */
-    .countdown {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 14px;
-    }
+  /* ===== COUNTDOWN ===== */
+  .countdown {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 14px;
+  }
 
-    .time-box {
-      background: linear-gradient(135deg, #2193b0, #6dd5ed);
-      border-radius: 12px;
-      padding: 16px 8px;
-      color: #fff;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-    }
+  .time-box {
+    background: #1a1a1a;
+    border-radius: 12px;
+    padding: 16px 8px;
+    color: #ffffff;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,0.05);
+  }
 
-    .number {
-      font-size: 2.4rem;
-      font-weight: 800;
-    }
+  .number {
+    font-size: 2.4rem;
+    font-weight: 800;
+  }
 
-    .label {
-      font-size: 0.75rem;
-      opacity: 0.9;
-      margin-top: 4px;
-      letter-spacing: 0.5px;
-    }
+  .label {
+    font-size: 0.75rem;
+    opacity: 0.85;
+    margin-top: 4px;
+    letter-spacing: 0.5px;
+  }
 
-    .note {
-      margin-top: 22px;
-      font-size: 0.85rem;
-      color: #666;
-    }
+  .note {
+    margin-top: 22px;
+    font-size: 0.85rem;
+    color: #b0b0b0;
+  }
 
-    /* ===== LINK LIHAT REQUEST ===== */
-    .view-link {
-      margin-top: 26px;
-      display: none;
-    }
+  /* ===== LINK LIHAT REQUEST ===== */
+  .view-link {
+    margin-top: 26px;
+    display: none;
+  }
 
-    .view-link a {
-      display: inline-block;
-      padding: 11px 26px;
-      border-radius: 999px;
-      font-weight: 800;
-      text-decoration: none;
-      color: #1565c0;
-      background: #e3f2fd;
-      border: 2px solid #90caf9;
-      transition: all 0.25s ease;
-    }
+  .view-link a {
+    display: inline-block;
+    padding: 11px 26px;
+    border-radius: 999px;
+    font-weight: 800;
+    text-decoration: none;
+    color: #ffffff;
+    background: #1f1f1f;
+    border: 1px solid #444;
+    transition: all 0.25s ease;
+  }
 
-    .view-link a:hover {
-      background: #1565c0;
-      color: #fff;
-      transform: translateY(-2px);
-    }
+  .view-link a:hover {
+    background: #333;
+    transform: translateY(-2px);
+  }
 
-    @media (max-width: 480px) {
-      .open-title { font-size: 1.9rem; }
-      .number { font-size: 2rem; }
-    }
-  </style>
+  @media (max-width: 480px) {
+    .open-title { font-size: 1.9rem; }
+    .number { font-size: 2rem; }
+  }
+</style>
 </head>
 
 <body>
@@ -241,6 +239,7 @@
 
 </body>
 </html>
+
 
 
 
