--- a/form-request.html
+++ b/form-request.html
@@ -164,6 +164,54 @@ button:hover{
 .air-datepicker-cell.holiday-red{
   color:#ff6b6b !important;
 }
+  /* ===== LOADING DOTS (FIX) ===== */
+.dot-loader{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+}
+
+.dots{
+  display:flex;
+  gap:12px;
+  margin-top:10px;
+}
+
+.dots span{
+  width:14px;
+  height:14px;
+  border-radius:4px;
+  background:#aaa;
+  animation:squareBounce 1.2s infinite ease-in-out both;
+}
+
+/* warna netral biar cocok dark */
+.dots span:nth-child(1){
+  background:#ff6b6b;
+}
+.dots span:nth-child(2){
+  background:#4dabf7;
+}
+.dots span:nth-child(3){
+  background:#ffd43b;
+}
+
+.dots span:nth-child(1){ animation-delay:0s; }
+.dots span:nth-child(2){ animation-delay:.15s; }
+.dots span:nth-child(3){ animation-delay:.3s; }
+
+@keyframes squareBounce{
+  0%,80%,100%{
+    transform:translateY(0) scale(0.9);
+    opacity:.5;
+  }
+  40%{
+    transform:translateY(-12px) scale(1.1);
+    opacity:1;
+  }
+}
+
 </style>
 </head>
 
@@ -431,6 +479,7 @@ requestForm.addEventListener("submit", async e=>{
 </script>
 </body>
 </html>
+
 
 
 
