--- a/form-request.html
+++ b/form-request.html
@@ -102,11 +102,12 @@ button:hover{
 }
 
 .success{
-  color:#b7f5c7;
-  background:#0f3d22;
+  color:#fff3e0;
+  background:#d97706; /* ORANGE */
   padding:8px;
   border-radius:8px;
 }
+
 
 .error{
   color:#f5b7b7;
@@ -479,6 +480,7 @@ requestForm.addEventListener("submit", async e=>{
 </script>
 </body>
 </html>
+
 
 
 
