--- a/INPUTNIK.html
+++ b/INPUTNIK.html
@@ -102,13 +102,14 @@
   }
 
   #formCutiBtn {
-    display: none;
-    background: #1e7e34;
-  }
+  display: none;
+  background: #d97706; /* ORANGE */
+}
 
-  #formCutiBtn:hover {
-    background: #28a745;
-  }
+#formCutiBtn:hover {
+  background: #f59e0b; /* ORANGE lebih terang */
+}
+
 </style>
 
 </head>
@@ -204,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
