--- a/form-request.html
+++ b/form-request.html
@@ -323,7 +323,7 @@ const localeID = {
   if (footerEl) {
     footerEl.innerHTML =
       `Kuota libur bulan <b>${m}</b>.<br>
-       8 jika Lembur, Tidak Lembur = 9.<br>
+       9 jika Lembur 3, 10 Lembur = 2, 11 Lembur = 1, 12 Jika tidak Lembur.<br>
        Jika kuota hari penuh tidak bisa direquest.`;
   }
 })();
@@ -480,6 +480,7 @@ requestForm.addEventListener("submit", async e=>{
 </script>
 </body>
 </html>
+
 
 
 
