--- a/INPUTNIK.html
+++ b/INPUTNIK.html
@@ -135,7 +135,7 @@
     /* ===============================
        🔒 PROTEKSI OPEN / CLOSE
        =============================== */
-    const day = new Date().getDate();
+    const day = 10;
     if (day < 1 || day > 15) {
       window.location.replace(
         "https://hong-ark.github.io/req-cuti/req-cuti.html"
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
