--- a/INPUTNIK.html
+++ b/INPUTNIK.html
@@ -135,12 +135,12 @@
     /* ===============================
        🔒 PROTEKSI OPEN / CLOSE
        =============================== */
-    const day = 10;
-    if (day < 1 || day > 15) {
-      window.location.replace(
-        "https://hong-ark.github.io/req-cuti/req-cuti.html"
-      );
-    }
+// const day = new Date().getDate();
+// if (day < 1 || day > 15) {
+//   window.location.replace(
+//     "https://hong-ark.github.io/req-cuti/req-cuti.html"
+//   );
+// }
 
     /* ===============================
        🔎 CEK NIK
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
