--- a/form-request.html
+++ b/form-request.html
@@ -371,7 +371,7 @@ const localeID = {
   if (footerEl) {
     footerEl.innerHTML =
       `Kuota libur bulan <b>${m}</b>.<br>
-       9 jika Lembur 3, 10 Lembur = 2, 11 Lembur = 1, 12 Jika tidak Lembur.<br>
+       8 = Lembur 2, 9 = Lembur 1, 10 = Tidak Lembur.<br>
        Jika kuota hari penuh tidak bisa direquest.`;
   }
 })();
@@ -545,6 +545,7 @@ requestForm.addEventListener("submit", async e=>{
 </a>
 </body>
 </html>
+
 
 
 
